Closed Bug 189021 Opened 22 years ago Closed 21 years ago

crash when cloning event

Categories

(Calendar :: General, defect)

x86
Windows 98
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: spenot, Assigned: mostafah)

References

Details

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.3b) Gecko/20030112
Build Identifier: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.3b) Gecko/20030112

Mozilla crashes when I attempt to publish an event for which email alarm has
been turned on.


Reproducible: Always

Steps to Reproduce:
1. Create a new profile
2. Create an event, turn on Alarm and Email Alarm To (and enter an email address)
3. Publish the event

Actual Results:  
Mozilla crashes.

Expected Results:  
The calendar should get published on the server.

Calendar version is 2003011316-cal.

This bug might be related to bug 183076.
I can confirm this on my machine.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
This appears to be fixed now.  It fixed itself once bug 187826 was checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Is this bug really fixed ? 
Mozilla 1.2.1 Calendar 2003021416-cal on windows 98se still crash when I try to
publish an event with an email alarm.

This bug is more critical than that because the crash occurs also when I try to
copy the event to the clipboard.

I observed that the crash seemed to be happen during the execution of 
calendarEventArray[ eventArrayIndex ].clone(); in the function
eventArrayToICalString(..) of the file importExport.js

Reopening this bug, so Mostafa can take another look at it.
Mostafa: Eric says its crashing when cloning an event.
Eric: Please attach your .ics file to this bug.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
->For Mostafa to take a look at.
Assignee: mikep → mostafah
Status: REOPENED → NEW
Summary: crash when publishing event w/ email alarm → crash when cloning event
Attached file Calendar which crash mozilla —
mozilla crash when I use the copy (event) in the context menu.
Fixed in cvs:
http://bonsai.mozilla.org/cvsview2.cgi?file=oeICalEventImpl.cpp&root=/cvsroot&subdir=mozilla/calendar/libxpical&command=DIFF_FRAMESET&rev1=1.63&rev2=1.64
Status: NEW → RESOLVED
Closed: 22 years ago21 years ago
Resolution: --- → FIXED
*** Bug 195739 has been marked as a duplicate of this bug. ***
*** Bug 196687 has been marked as a duplicate of this bug. ***
*** Bug 200650 has been marked as a duplicate of this bug. ***
*** Bug 201255 has been marked as a duplicate of this bug. ***
*** Bug 205965 has been marked as a duplicate of this bug. ***
Last night, I downloaded the latest source from the nightlies directory and did
a "make -f client.mk" to retrieve the latest modifications from the CVS and
compile Mozilla, and the crash still occurs.
This bug still occurs with a version of Mozilla (from the trunk) I've just
compiled. Could it be reopened?
Yes, reopen and attach the ics file that causes the crash.
Here's an ics file containing only one event. When I copy the event and paste
it to 2003-06-20, Mozilla crashes.
(Bugzilla doesn't allow me to reopen the bug.)
The bugspam monkeys have been set free and are feeding on Calendar :: General. Be afraid for your sanity!
QA Contact: gurganbl → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: