Fixed bug 189021: crash when cloning event